--- a/seminar_2/app/src/main/res/layout/activity_main2.xml
+++ b/seminar_2/app/src/main/res/layout/activity_main2.xml
@@ -11,8 +11,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        android:onClick="deschide"
+        android:text="Deschide Activitatea 3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
